# CitySorter

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  PROJECT.md  README.md
.github/: copilot-instructions.md
include/: bst.h
src/: README.md
src/cli/: README.md  main.c
src/connectors/: README.md
src/core/: README.md  bst.c
src/models/: README.md
tests/: README.md
tests/unit/: test_bst.c
